# sfce

./: .gitignore  Cargo.toml  out.txt  sf.bat
src/: bits.rs  board.rs  board_parser.rs  caches.rs  fumen.rs  grid.rs  input.rs  main.rs  page.rs  pattern.rs  piece.rs  placement.rs  program.rs  ranged.rs  set.rs  text.rs  traits.rs
src/commands/: congruent.rs  finesse.rs  fumen.rs  mod.rs  movec.rs  pattern.rs  place.rs  possible.rs  res.rs  send.rs  test.rs
src/data/: kick.rs  mod.rs  placements.rs
tables/: ascdx.kick  jstris.kick  none.kick  srs.kick  srsx.kick  tetrio.kick
