[package]
name = "sfce"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bincode = "1.3.3"
chumsky = "1.0.0-alpha.7"
clap = { version = "4.5.21", features = ["derive"] }
ctrlc = "3.4.5"
fumen = "0.1.2"
indicatif = "0.17.9"
itertools = "0.13.0"
open = "5.3.1"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
